add scipy to dependencies

--- a/environment.yml
+++ b/environment.yml
@@ -3,8 +3,8 @@ channels:
   - defaults
 dependencies:
   - python=3.9
-  - torchaudio
   - torchvision
   - pytorch
   - cudatoolkit=11.3
+  - scipy
 prefix: /root/miniconda3/envs/p2m
