--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,10 @@
 name: pytorch3d
 channels:
+  - pytorch3d
+  - pytorch
+  - bottler
+  - iopath
+  - conda-forge
   - defaults
 dependencies:
   - python=3.9
